Improved on theme and fixed some overflows

--- a/backend-app/public/stylesheets/addgroup.css
+++ b/backend-app/public/stylesheets/addgroup.css
@@ -7,13 +7,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-::placeholder {
-    color: #1F885B;
-    opacity: .5; 
-}
-
 body {
-    background-color: beige;
+    background-color:  #bfd8bd;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -75,6 +70,7 @@ li {
     height: 60px;
     border: none;
     border-radius: 50%;
+    filter: grayscale(100%);
 }
 
 main {
@@ -86,70 +82,81 @@ main {
 
 .side-bar {
     height: 100%;
-    width: 20%;
+    width: 17%;
     display: flex;
     flex-direction: column;
     padding-top: 1%;
-    padding-left: 2%;
+    padding-left: 3%;
     padding-right: 2%;
-    justify-content: space-evenly;
+    justify-content: start;
     gap: 14px;
+    background-color: beige;
 }
 
-hr {
+/* hr {
     height: 95%;
     align-self: center;
-}
+} */
 
 .individuals, .groups {
     height: 35%;
     display: flex;
     flex-direction: column;
-    border-radius: 8px;
-    border: 1px solid black;
 }
 
-#dashboard-button, #all-expenses-button {
-    background-color: rgba(24, 150, 150, 0.696);
-    border: none;
+.dashboard-button, .all-expenses-button {   
     width: 100%;
     height: 6%;
     font-size: 18px;
-    color: black;
-    border-radius: 8px;
-    text-align: center;
+    color: rgba(0, 0, 0, 0.827);
+    text-align: left;
     padding: 5px 0px;
     text-decoration: none;
-    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-weight: 500;
 }
 
-#individuals-button, #groups-button {
-    background-color: rgba(24, 150, 150, 0.696);
-    border: none;
+.side-bar a:hover {
+    color: black;
+}
+
+
+.side-bar-icon {
+    width: 18px;
+    height: 18px;
+}
+/* .individuals-content .side-bar-icon{
+    width: 22px;
+    height: 22px;
+} */
+.groups-content .side-bar-icon{
+    padding-right: 2px;
+    width: 19px;
+    height: 17px;
+}
+
+
+.individuals-button, .groups-button {
     height: 18%;
     width: 100%;
     font-size: 18px;
-    color: black;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    text-decoration: none;
+    color: rgba(0, 0, 0, 0.827);;
+    text-decoration: underline;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     gap: 12px;
-    border-bottom: 1px solid black;
+    font-weight: 500;
 }
 
 #plus-icon {
-    width: 25px;
-    height: 25px;
-    background-color: white;
-    border-radius: 50%;
-}
-
-.individuals img, .groups img {
-    width: 25px;
-    height: 25px;
+    width: 18px;
+    height: 18px;
+    /* background-color: rgb(236, 228, 228); */
+    
+    
 }
 
 .groups-content, .individuals-content {
@@ -170,15 +177,59 @@ hr {
 .groups-content li, .individuals-content li {
     width: 100%;
     height: 12%;
-    text-align: center;
+    text-align: left;
+    display: flex;
+    gap: 5px;
 }
 
 .groups-content a, .individuals-content a {
     height: 16%;
     font-size: 16px;
     text-decoration: none;
-    color: black;
+    color: rgba(0, 0, 0, 0.718);
 }
+
+.header-right {
+    position: relative;
+  }
+  .modal-window {
+    width: 150px;
+    position: absolute;
+    top: 100%;
+    background-color: rgba(24, 150, 150, 0.696);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+    transform: translateX(75%);
+    transition: all 1s ease-in;
+    display: none;
+    z-index: -1;
+  }
+  .modal-window.open {
+    transform: translateX(0%);
+    display: block;
+  }
+  .modal-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .modal-link {
+    color: snow;
+    text-decoration: none;
+  }
+  .modal-link:hover {
+    color: #fff;
+  }
+  .logout {
+    color: #ef4444;
+  } 
+
+
+
+/* ritvik part  */
+
 
 .content{
     width: 150vh;
@@ -220,6 +271,7 @@ hr {
     mix-blend-mode: luminosity;
     opacity: 0.5;
     transition: all ease 1s;
+    border: 1px solid black;
 }
 .add-button:hover{
     scale: 0.9;
@@ -229,16 +281,17 @@ hr {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     gap: 15px;
     position: relative;
-    right: 20%;
+    right: 3%;
     transition: all ease 0.7s;
 }
 
 .groupname-text{
     color: #0000006e;
-    font-size: 36px;
+    text-align: center;
+    font-size: 32px;
     font-weight: 400;
     text-decoration: none;
 }
@@ -247,7 +300,7 @@ hr {
     transition: all ease 0.7s;
 }
 .groupname:hover{
-    scale: 0.9;
+    scale: 1.05;
 }
 .boxji{
     transition: all ease .9s;
@@ -255,6 +308,11 @@ hr {
 .boxji:hover{
     scale: 0.9;
     cursor: pointer;
+}
+ /* style to button */
+button{
+    border: none;
+    font-size: 24px;
 }
 .new-group{
     width: 40rem;
@@ -264,7 +322,7 @@ hr {
     scale: 0;
     border-radius: 2.5rem;
     border: 1px solid rgba(138, 127, 127, 0.8);
-    background: #ffffff8e ;
+    background: #eff0ee ;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: relative;
     right: 20%;
@@ -274,8 +332,6 @@ hr {
     align-items: center;
     gap: 10px;
 }
-
-
 
 .for-gap{
     padding-bottom: 10%;
@@ -296,12 +352,14 @@ hr {
     font-size: 1rem;
     padding-left: 15px;
     border-radius: .25rem;
-    background: #ffffffd4;
+    background: #ffffff;
     outline: none;
     box-shadow: 0px 0px 18px -3px #6C8E80;
     transition:all ease 1s ;
 }
-
+.add-group-name{
+    padding-top: 10%;
+}
 .get-data:hover{
     scale:0.95;
     box-shadow: 0px 0px 14px -5px #778a72;
